--- a/css/how.css
+++ b/css/how.css
@@ -1,198 +1,280 @@
-.graphic-info-block{
-	background-color: #38465B;
-	overflow:hidden;
+.curve-hero{
+	position: relative;
+    width: 100%;
+    padding: 60px 0;
 }
-.graphic-info{
-	display: flex;
-	flex-direction: column;
-	padding: 5em;
-	color: white;
-	max-width: 600px;
-	justify-content: center;
-}
-.download-buttons{
-	display: flex;
-	flex-direction: row;
-}
-.download-buttons img{
-	margin-right: 10px;
-	cursor: pointer;
-}
-.h1{
-	font-weight: bold;
-}
-.graphic-info p {
-	letter-spacing: 0.43px;
-	line-height: 40px;
-	margin:20px 0;
-	font-weight: 300 !important;
-}
-.phonegraphic{
-	display: flex;
-	justify-content: center;
-	padding-right: 5em;
-	margin-bottom: -5px !important;
-	padding-bottom: -5px !important;
-}
-.phonegraphic img{
-	height: 600px;
-}
-.graphic-button{
-	color: white;
-	padding: 10px 30px;
-	letter-spacing: .3px;
-	border-radius: 8px;
-	background: linear-gradient(140.11deg, #2864FF 0%, #00E1B4 100%);
-	max-width: 213px;
-	width: 100%;
-	font-size: 14px;
-	cursor: pointer;
-}
-.list-container{
-	display: flex;
-    justify-content: center;
-    align-items: center;
+.header-info{
+	background: url(../assets/images/cur.png);
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
     flex-direction: column;
+    /*justify-content: center;*/
+    align-content: center;
+    color: white;
+    padding: 20px;
+    background-color: transparent;
+    width: 100%;
+    height: 424px;
+    box-sizing: border-box;
+    padding: 20px;
+    border-bottom-right-radius: 202px;
+}
+.testbox{
+  max-width: 680px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  padding: 62px 0 0 100px;
+}
+.header-info p{
+  line-height: 29px;
+  letter-spacing: .3px;
+  font-size: 18px;
+  font-weight: 300;
 }
 
-.list-graphic-block{
-	width: 80%;
-	padding: 100px;
+.header-info h1{
+    margin: 40px 0;
+    font-weight: 500;
+    line-height: 47px;
+    letter-spacing: .22px;
 }
-.listItem{
-	margin-bottom: 30px;
-	padding: 10px;
-	cursor: pointer;
+.how-info-con{
+	padding: 40px 4em 4em 4em;
+	border-bottom-left-radius: 100px;
+	border-bottom-right-radius: 100px;
+	background-color: white;
 }
-.listItem:hover{
-	padding: 10px;
-	box-shadow: 0 0 14px 0 rgba(40,100,255,0.16);
+.how-info-con2{
+	padding: 200px 4em 40px 4em;
+	background-color: transparent;
 }
-.list-block{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin-bottom: 
-}
-/*.left{
-	display: flex;
-}
-*/
-.list-graphic img{
-	height: 500px;
-}
-.list-graphic{
+.how-info-box{
+	background-color: transparent;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
+	/*padding: 50px;*/
 }
-.list-block h2{
-	margin-bottom: 30px;
-	margin-right: auto;
+
+.special{
+	padding: 0 0 30px 0;
 }
-.step{
+.how-info-box h1{
+	letter-spacing: 0.43px;
+	color: #3C465A;
+	margin-bottom: 20px;
+}
+.how-info-box p {
+	letter-spacing: 0.3px;
+	color: #3C465A;
+	font-size: 20px;
+	text-align: center;
+	font-weight: 300; 
+	/*LIGHT*/
+}
+.icon-con{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
+.icon-row{
+	padding: 0 0 200px 0;
+	max-width: 50%;
+	width: 100%;
 	display: flex;
 	flex-direction: row;
+	justify-content: center;
 	align-items: center;
-	font-size: 20px;
 }
-.number{
-	height: 40px;
-	width: 40px;
-	border-radius: 50%;
-	border: 1px solid black;
-	color: blue;
+.blue-con{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-right: 20px;
 }
-
-.location-block{
+.blue-img{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
-	padding-top: 50px;
 }
-.location-block p{
-	margin: 30px 0;
+.blue-img img{
+	height: 460px;
 }
-.location-images{
-	max-width: 800px;
-	width: 100%;
+.img-con{
+	padding: 100px 0
 }
-.location-images img{
-	width: 24%;
-}
-.location-action{
+.icon-row div{
 	display: flex;
+	flex-grow: 1;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
-	margin: 50px 0;
 }
-.location-action button{
-	border-radius: 10px;
-	border-width: 0;
-	color: white;
-	max-width: 250px;
+.icon-row div img{
+	height: 80px;
+}
+.tile-slider{
+	display: flex;
+	flex-direction: row;
 	width: 100%;
-	padding: 13px 25px;
-	font-size: 14px;
+	overflow: hidden;
+	overflow-x: scroll;
+}
+.featured-tiles{
+	display: flex;
+	flex-direction: row;
+	/*justify-content: center;*/
+	align-items: center;
+}
+.featured-tiles img{
+	height: 250px;
+	margin:20px;
 	cursor: pointer;
-	background: linear-gradient(140.11deg, #2864FF 0%, #00E1B4 100%);
+}
+.featured-title{
+	justify-content: center;
+	align-items: center;
+	display: flex;
+}
+.featured-title h1{
+	padding: 50px 0;
+	color: #3C465A;
+	/*font-weight: 600;*/
+	/*font-size: 40px;*/
+}
+
+.grey-content{
+	background-color: #F2F2f2;
+}
+
+
+.list-con{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	height: 100%;
+}
+.list-con div{
+	max-width: 500px;
+	width: 100%;
+}
+.list-group.vertical-steps{
+  padding-left:10px;
+}
+.list-group.vertical-steps .list-group-item{
+  border:none;
+  border-left:3px solid #ffe5b4;
+  box-sizing:border-box;
+  border-radius:0;
+  counter-increment: step-counter;
+  padding-left:20px;
+  padding-right:0px;
+  padding-bottom:50px;  
+  padding-top:0px;
+}
+.list-group.vertical-steps .list-group-item.active{
+  background-color:transparent;
+  color:inherit;
+}
+.list-group.vertical-steps .list-group-item:last-child{
+  border-left:3px solid transparent;
+  padding-bottom:0;
+}
+.list-group.vertical-steps .list-group-item::before {
+  /*border-radius: 50%;*/
+  background-color:#FFDAB9 !important;
+  color:#FFDAB9 !important;
+  content: counter(step-counter);
+  display:inline-block;
+  float:left;
+  height:25px;
+  line-height:25px;
+  margin-left:-35px;
+  text-align:center;  
+  width:25px;  
+}
+.list-group.vertical-steps .list-group-item span,
+.list-group.vertical-steps .list-group-item a{
+  display:block;
+  overflow:hidden;
+  padding-top:2px;
+}
+/*Active/ Completed States*/
+.list-group.vertical-steps .list-group-item.active::before{
+  background-color:black;
+  color:#fff;
+}
+.list-group.vertical-steps .list-group-item.completed{
+  border-left:1px solid black;
+}
+.list-group.vertical-steps .list-group-item.completed::before{
+  background-color:black;
+  color:#fff;
+}
+.list-group.vertical-steps .list-group-item.completed:last-child{
+  border-left:1px solid transparent;
 }
 
 
 
-@media screen and (max-width: 1100px) {
-	.list-graphic-block{
-		width: 100%;
-		padding: 20px;
-	}
-	.number{
-		height: 30px;
-		width: 30px;
-		font-size: 16px;
-	}
-	.step p{
-		width: 84%;
-	}
-	.list-graphic img{
-		height: 350px;
+
+
+
+
+
+@media screen and (max-width: 1200px) {
+	.list-con{
+		justify-content: center;
+		padding-bottom: 100px;
 	}
 }
 
 @media screen and (max-width: 1000px) {
-	.graphic-info{
-		padding: 1em;
+	.featured-tiles img{
+		height: 150px;
 	}
-	.download-buttons img{
-		width: 150px;
-		margin-bottom: 20px;
+	
+	.testbox{
+		padding: 0;
 	}
-	.phonegraphic img{
+	.how-info-con,.how-info-con2{
+		padding: 10px;
+	}
+	.blue-img img{
 		height: 400px;
+		padding-top: 50px;
 	}
-	.phonegraphic{
-		padding: 5px;
-		margin-top: -5px;
+	.icon-row{
+		flex-direction: column;
 	}
-	.location-block{
-		display: flex;
+	.icon-row div{
+		padding: 20px 0
+	}
+	.how-info-box p{
+		text-align: left;
+	}
+	.header-info p{
+		font-size: 14px;
+	}
+	.header-info{
+		border-bottom-right-radius: 129px;
+	}
+	h1,h2{
+		font-weight: 300;
+		font-size: 28px !important;
+	}
+	h3{
+		font-weight: 300;
+	}
+	p{
+		font-size: 14px !important
+	}
+	.how-info-box{
 		align-items: flex-start;
-		padding: 20px;
-
-	}
-	.location-images{
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		justify-content: center;
-		align-items: center;
-	}
-	.location-images img{
-		width: 40%;
 	}
 }
+
