--- a/css/merchant.css
+++ b/css/merchant.css
@@ -1,3 +1,92 @@
+.curve-hero{
+	position: relative;
+    width: 100%;
+    padding: 60px 0;
+}
+.header-info{
+	background: url(../assets/images/lady.png);
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    color: white;
+    padding: 20px;
+    background-color: transparent;
+    width: 100%;
+    height: 525px;
+    box-sizing: border-box;
+    padding: 20px;
+   	border-bottom-right-radius: 202px;
+
+}
+.testbox{
+  max-width: 680px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  padding: 50px 0 0 100px;
+}
+.header-info p{
+  line-height: 29px;
+  letter-spacing: .3px;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.header-info h1{
+    margin: 40px 0;
+    font-weight: 500;
+    line-height: 47px;
+    letter-spacing: .22px;
+}
+.grizzy-grey{
+	background-color: #f2f2f2;
+	padding-bottom: 100px;
+}
+.bub-con{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+.big-bubble{
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 0 2px 12px -2px rgba(40,100,255,0.6);
+	height: 250px;
+	width: 250px;
+}
+.big-bubble h1{
+	text-align: center;
+}
+.grow{
+	flex-grow: 1;
+}
+.case-con{
+	display: flex;
+	flex-direction: column;
+}
+.case-con h1{
+	padding-bottom: 30px;
+}
+.case-con a{
+	border: 3px solid blue;
+	border-radius: 10px;
+	padding:12px 25px;
+	color: blue;
+	background-color: white;
+	max-width: 217px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 .content{
 	padding: 6em;
     display: flex;
@@ -5,6 +94,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: white;
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
+}
+.bubble-row{
+	width: 80%;
+	justify-content: center;
+	align-items: center;
 }
 .why-header{
 	display: flex;
@@ -85,13 +182,13 @@
 }
 .apply-now button{
 	color: white;
-	padding: 10px 30px;
+	padding: 12px 45px;
 	letter-spacing: .3px;
 	border-radius: 8px;
 	background: linear-gradient(140.11deg, #2864FF 0%, #00E1B4 100%);
 	max-width: 213px;
 	width: 100%;
-	font-size: 14px;
+	font-size: 18px;
 	cursor: pointer;
 }
 #brand-row{
@@ -100,6 +197,94 @@
 	padding: 5em;
 	justify-content: center;
 }
+.extra-info p {
+	font-size: 22px;
+	margin-top: 20px;
+}
+.bgbrand{
+	max-width: 125px;
+	max-height: 125px;
+	height: auto;
+	width: auto;
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+.brands-row{
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+}
+.ahg{
+	background: url(../assets/images/AHG.png);
+	width: 125px;
+	height: 125px;
+	/*height: auto;
+	width: auto;*/
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	margin:30px;
+}
+.ts{
+	background: url(../assets/images/ts.png);
+	width: 125px;
+	height: 125px;
+	/*height: auto;
+	width: auto;*/
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	margin:30px;
+}
+.eg{
+	background: url(../assets/images/eg.png);
+	width: 125px;
+	height: 125px;
+	/*height: auto;
+	width: auto;*/
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	margin:30px;
+}
+.msp{
+	background: url(../assets/images/mspp.png);
+	width: 125px;
+	height: 125px;
+	/*height: auto;
+	width: auto;*/
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	margin:30px;
+}
+.hs{
+	background: url(../assets/images/hs.png);
+	width: 125px;
+	height: 125px;
+	/*height: auto;
+	width: auto;*/
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	margin:30px;
+}
+.nik{
+	background: url(../assets/images/NikeTP.png);
+	width: 125px;
+	height: 125px;
+	/*height: auto;
+	width: auto;*/
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	margin:30px;
+}
+
+
 .blank-brand{
 	padding: 10px 20px;
 	letter-spacing: .3px;
@@ -312,12 +497,45 @@
 		width: 45%;
 		margin:5px;
 	}
+	.content{
+		padding:0;
+	}
 
 }
 
 @media screen and (max-width: 1000px) {
 	.space-out{
 		margin-top: 40px;
+	}
+	.testbox{
+		padding: 0;
+	}
+	.bub-con{
+		flex-direction: column;
+	}
+	.big-bubble{
+		height: 200px;
+		width: 200px;
+		margin: 20px 0;
+	}
+	.content{
+		padding: 0;
+	}
+	.extra-info,.apply-now{
+		padding: 10px;
+	}
+	.extra-info{
+		padding-top: 50px;
+	}
+	.apply-now{
+		padding-bottom: 100px;
+	}
+	.brands-row{
+		flex-direction: column;
+	}
+	.bubble-row{
+		width: 100%;
+		padding: 10px;
 	}
 }
 @media screen and (max-width: 800px) {
@@ -330,7 +548,7 @@
 	}
 	.block{
 		width: 100%;
-		margin: 20px;
+		/*margin: 20px;*/
 		align-items: flex-start;
 	}
 	.iconTItle h3{
@@ -357,7 +575,7 @@
 
 @media screen and (max-width: 768px) {
 	.content,.grey-content,.navy-content,#brand-row{
-		padding:10px;
+		/*padding:10px;*/
 	}
 	.graph{
 		height: 200px;
