--- a/css/support.css
+++ b/css/support.css
@@ -1,4 +1,48 @@
-.help-header{
+.curve-hero{
+	position: relative;
+    width: 100%;
+    padding: 60px 0;
+}
+.header-info{
+	background: url(../assets/images/Support-Header.png);
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    color: white;
+    padding: 20px;
+    background-color: transparent;
+    width: 100%;
+    height: 525px;
+    box-sizing: border-box;
+    padding: 20px;
+   	border-bottom-right-radius: 202px;
+
+}
+.testbox{
+  max-width: 680px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  padding: 10px 0 0 100px;
+}
+.header-info p{
+  line-height: 29px;
+  letter-spacing: .3px;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.header-info h1{
+    margin: 40px 0;
+    font-weight: 600;
+    line-height: 47px;
+    letter-spacing: .22px;
+}.help-header{
 	width: 80%;
 	padding: 80px 0;
 }
