--- a/css/locations.css
+++ b/css/locations.css
@@ -40,7 +40,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
-    height: 200px;
+    height: 150px;
 }
 #location-info{
     display: flex;
@@ -75,7 +75,8 @@
     height: 100%;
 }
 .l-info-box h3{
-    font-weight: 600;
+    font-weight: 300;
+    font-size: 12px;
     padding: 15px 0;
 }
 
@@ -240,7 +241,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    margin: 50px 0;
+    margin: 30px 0;
     justify-content: center;
 }
 .mainFilters{
