--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -1,15 +1,41 @@
-/*body { background-color: #fff;}*/
+body { background-color: #F4F7FF;}
 
-.hero-home-container {
+.heroHomeContainer {
     margin: 0;
-    display: flex;
     position: relative;
-    text-align: center;
-    padding: 14em 0 14em 0;
-    background: url(../assets/images/life.png);
+    background: url(../images/hero.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 400px;
     align-items: center;
+}
+
+.heroHomeContainer .greyWithOpacity {
+    position: absolute;
+    background-color: grey;
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+}
+.heroHomeContainer .heroInfo {
+    position: relative;
+    padding: 0 80px;
+    font-size: 18px;
+    font-weight: 600;
+    color: #fff;
+    padding-top: 70px;
+}
+
+.heroHomeContainer .btnBox {
+    background-color: #2864FF;
+    color: #fff;
+    text-align: center;
+    display: inline-block;
+    border-radius: 8px;
+    padding: 10px 10px;
+    margin-top: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: -0.44px;
 }
