--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -49,5 +49,6 @@ body { background-color: #F4F7FF;}
     .heroHomeContainer .heroInfo {
         padding: 0 30px;
         font-size: 16px;
+        padding-top: 70px;
     }
 }
