--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -1,5 +1,5 @@
-body { background-color: #F4F7FF;}
-
+body {background-color: #fff;}
+.clear { clear: both;}
 .heroHomeContainer {
     margin: 0;
     position: relative;
@@ -13,7 +13,7 @@ body { background-color: #F4F7FF;}
 
 .heroHomeContainer .greyWithOpacity {
     position: absolute;
-    background-color: grey;
+    background-color: #3C465A;
     width: 100%;
     height: 100%;
     opacity: 0.8;
@@ -40,15 +40,46 @@ body { background-color: #F4F7FF;}
     letter-spacing: -0.44px;
 }
 
+.promotions {
+    background-color: #fff;
+    clear: both;
+}
 
+.promotions h1, .takeControl h1 {
+    color: #3C465A;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 44px;
+    text-align: center;
+    padding: 50px 0;
+}
+.promotions .col-3 {
+    width: 33%;
+    border-radius: 4px;
+    float: left;
+    box-sizing: border-box;
+    text-align: center;
+}
 
+.promotions .col-3 img {
+    width: calc(100% - 30px);
+}
 
+.takeControl {
+    background-color: #F2F2F2;
+    margin-top: 50px;
+    padding-bottom: 50px;
+}
+.takeControl p {
+    max-width: 1440px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0 50px;
+}
 
-@media (max-width: 1200px) {
-
-    .heroHomeContainer .heroInfo {
-        padding: 0 30px;
-        font-size: 16px;
-        padding-top: 70px;
+@media (max-width: 980px) {
+    .promotions .col-3 {
+        width: 100%;
+        padding-bottom: 20px;
     }
 }
