--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -45,20 +45,24 @@ body {background-color: #fff;}
     clear: both;
 }
 
-.promotions h1, .takeControl h1 {
+.promotions h1, .takeControl h1, .howItWorks h1 {
     color: #3C465A;
     font-size: 32px;
     font-weight: 600;
     line-height: 44px;
     text-align: center;
-    padding: 50px 0;
+    padding: 50px;
 }
-.promotions .col-3 {
+.promotions .col-3, .howItWorks .col-3 {
     width: 33%;
-    border-radius: 4px;
     float: left;
     box-sizing: border-box;
     text-align: center;
+}
+
+.treeBannes {
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .promotions .col-3 img {
@@ -77,8 +81,31 @@ body {background-color: #fff;}
     padding: 0 50px;
 }
 
+.howItWorks {
+    padding-bottom: 50px;
+}
+
+.howItWorks h2 {
+    color: #3C465A;
+    padding: 15px 0;
+}
+
+.howItWorks .icon {
+    max-width: 60px;
+}
+
+.howItWorks .col-3 {
+    text-align: left;
+}
+
+@media (max-width: 1200px) {
+    .heroHomeContainer .heroInfo {
+        padding-top: 120px;
+    }
+}
+
 @media (max-width: 980px) {
-    .promotions .col-3 {
+    .promotions .col-3, .howItWorks .col-3 {
         width: 100%;
         padding-bottom: 20px;
     }
