--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -53,7 +53,7 @@ body {background-color: #fff;}
     font-weight: 600;
     line-height: 44px;
     text-align: center;
-    padding: 50px;
+    padding: 50px 25px;
 }
 .promotions .col-3, .howItWorks .col-3 {
     width: 33%;
@@ -171,8 +171,6 @@ body {background-color: #fff;}
 .instagram {
     max-width: 1440px;
     text-align: left;
-    padding-left: 30px;
-    padding-right: 30px;
     margin: 0 auto;
     padding-bottom: 80px;
 }
@@ -183,7 +181,6 @@ body {background-color: #fff;}
 .instagramWrapper {
     overflow-x: scroll;
     overflow-y: hidden;
-    padding: 0 30px;
     height: 157px;
     max-width: 1440px;
     width: calc(100% - 50px);
