--- a/newDesign/css/nav.css
+++ b/newDesign/css/nav.css
@@ -79,19 +79,33 @@ p,div{
 
 .footer {
     background-color: #3C465A;
-    padding: 60px 0;
+    padding: 50px 0;
+    text-align: center;
+    color: #fff;
 }
 
 .footer .footerMenu {
     text-align: center;
 }
 
-.footer .footerNav {
+.footerMenu .footerNav {
     color: #fff;
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
     padding: 0 20px;
+}
+.footer .footerMoreLinksMenu {
+    text-align: center;
+    margin: 20px 0;
+}
+.footerMoreLinksMenu .footerNav {
+    color: #fff;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 18px;
+    padding: 0 15px;
+    text-decoration: underline;
 }
 
 .footer .socialLinks {
@@ -111,7 +125,7 @@ p,div{
     padding: 0 41px 0 31px;
 }
 
-.footer .socialLinks a:first-child {
+.footer .socialLinks a.fb {
     margin-left: 31px;
 }
 
@@ -127,6 +141,33 @@ p,div{
 .ig {
     background: url(../images/Insta.png);
 }
+
+.footerAppWrapper {
+    text-align: center;
+    width: 100%;
+}
+.footerAppWrapper .apple {
+    height: 40px;
+    width: 135px;
+    margin-right: 20px;
+}
+.footerAppWrapper .android {
+    height: 40px;
+    width: 134.63px;
+}
+
+.footer p {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 26px;
+}
+
+.footer .whiteLogo img {
+    height: 24px;
+    width: 129px;
+    margin: 28px 30px 0  0;
+}
+
 /*top menu hamburger*/
 @media (max-width: 1200px) {
     .topNav { display: none;}
@@ -235,5 +276,24 @@ p,div{
 
     #hamburgerMenu input:checked ~ ul {
         transform: none;
+    }
+}
+
+@media (max-width: 980px) {
+    .footer .socialLinks span {
+        display: block;
+    }
+    .footer .socialLinks span:last-child {
+        margin-top: 20px;
+    }
+    .footer .socialLinks a.fb {
+        margin-left: 0px;
+    }
+    .footer .socialLinks a.linked {
+        margin-left: 28px;
+        margin-right: 15px;
+    }
+    .footer .footerNav {
+        padding: 0 10px;
     }
 }
