--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -73,7 +73,7 @@ body {background-color: #fff;}
 }
 
 .takeControl, .whereCanShop {
-    background-color: #F2F2F2;
+    background-color: #F4F7FF;
     margin-top: 0px;
     padding-bottom: 50px;
 }
