--- a/newDesign/css/business.css
+++ b/newDesign/css/business.css
@@ -50,7 +50,8 @@ body {background-color: #fff;}
 }
 
 .whyUseOpenpay {
-    padding: 50px 150px;
+    padding: 50px 150px 60px;
+    background-color: #F4F7FF;
 }
 .whyUseOpenpay h1 {
     color: #3C465A;
@@ -122,7 +123,7 @@ body {background-color: #fff;}
     margin: 0 auto;
 }
 .longerTerms {
-    padding: 0 165px;
+    padding: 50px 165px;
 }
 .longerTerms h1 {
     color: #3C465A;
@@ -162,6 +163,11 @@ body {background-color: #fff;}
 @media (max-width: 980px) {
     .whyUseOpenpay .col-4 {
         width: 100%;
+    }
+    .heroBusinessContainer .heroInfo {
+        padding-right: 20px;
+        padding-left: 20px;
+        padding-top: 100px;
     }
 }
 @media (max-width: 850px) {
