--- a/newDesign/css/nav.css
+++ b/newDesign/css/nav.css
@@ -170,7 +170,7 @@ p,div{
 
 /*top menu hamburger*/
 @media (max-width: 1200px) {
-    .topNav { display: none;}
+    .topNav { visibility: hidden;}
     .heroHomeContainer .heroInfo {
         padding: 0 50px;
     }
@@ -190,8 +190,8 @@ p,div{
     #hamburgerMenu {
         display: block;
         position: relative;
-        top: 30px;
-        right: 50px;
+        top: -48px;
+        right: 30px;
         z-index: 1;
         float: right;
         -webkit-user-select: none;
@@ -223,7 +223,7 @@ p,div{
         height: 4px;
         margin-bottom: 5px;
         position: relative;
-        background: #cdcdcd;
+        background: #3C465A;
         border-radius: 3px;
         z-index: 1;
         transform-origin: 4px 0px;
@@ -241,7 +241,7 @@ p,div{
     #hamburgerMenu input:checked ~ span {
         opacity: 1;
         transform: rotate(45deg) translate(-2px, -1px);
-        background: #232323;
+        background: #3C465A;
     }
 
     #hamburgerMenu input:checked ~ span:nth-last-child(3) {
@@ -260,8 +260,9 @@ p,div{
         right: 0;
         margin: -100px 0 -50px 0;
         padding: 50px;
-        padding-top: 125px;
-        background: #ededed;
+        padding-top: 130px;
+        padding-bottom: 200px;
+        background: #fff;
         list-style-type: none;
         -webkit-font-smoothing: antialiased;
         transform-origin: -100% -100%;
