--- a/newDesign/css/business.css
+++ b/newDesign/css/business.css
@@ -20,7 +20,7 @@ body {background-color: #fff;}
 }
 .heroBusinessContainer .heroInfo {
     position: relative;
-    padding: 0 150px;
+    padding: 0 50px;
     color: #fff;
     padding-top: 70px;
 }
@@ -50,8 +50,7 @@ body {background-color: #fff;}
 }
 
 .whyUseOpenpay {
-    padding: 50px 150px 60px;
-    background-color: #F4F7FF;
+    padding: 50px;
 }
 .whyUseOpenpay h1 {
     color: #3C465A;
@@ -117,13 +116,13 @@ body {background-color: #fff;}
     box-sizing: border-box;
     text-align: center;
 }
-.col-2 img {
+.longerTerms .col-2 img {
     width: calc(100% - 30px);
     max-width: 420px;
     margin: 0 auto;
 }
-.longerTerms {
-    padding: 50px 165px;
+.longerTerms, .seamless {
+    padding: 50px;
 }
 .longerTerms h1 {
     color: #3C465A;
@@ -142,7 +141,106 @@ body {background-color: #fff;}
     line-height: 26px;
 }
 
+.whyUseCircles {
+    padding: 50px;
+}
+.whyUseCircles h1 {
+    color: #3C465A;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 44px;
+    padding-bottom: 40px;
+}
+.whyUseCircles .circle {
+    /* height: 180px; */
+    width: 180px;
+    color: #3C465A;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: center;
+    padding: 60px 0px;
+    box-sizing: border-box;
+    border-radius: 100px;
+    background-color: #FFFFFF;
+    margin: 0 auto;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+}
+.whyUseCircles .tellMeMoreBtn {
+    border: 2px solid #40354E;
+    border-radius: 4px;
+    color: #40354E;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: -0.44px;
+    line-height: 21px;
+    text-align: center;
+    max-width: 189px;
+    padding: 10px 40px;
+    margin: 70px auto;
+}
+.col-3 {
+    width: 33%;
+    float: left;
+    box-sizing: border-box;
+    text-align: center;
+}
 
+.trustedLeaders, .everywereYourCostumers {
+    padding: 50px;
+}
+
+.trustedLeaders h1, .everywereYourCostumers h1 {
+    color: #3C465A;
+    text-align: left;
+    margin-bottom: 20px;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 44px;
+}
+.trustedLeaders p, .everywereYourCostumers p {
+    color: #3C465A;
+    text-align: left;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 26px;
+}
+.everywereYourCostumers img {
+    height: 293px;
+    width: 100%;
+}
+.trustedLeaders img {
+    display: inline;
+    margin: 10px 20px;
+}
+
+.seamless h1 {
+    color: #3C465A;
+    text-align: left;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 44px;
+    margin-bottom: 20px;
+    max-width: 550px;
+}
+.seamless p {
+    color: #3C465A;
+    text-align: left;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 26px;
+    max-width: 550px;
+    margin-bottom: 30px;
+}
+.seamless icons {
+
+}
+.seamless img {
+    display: inline;
+    margin: 10px 30px;
+    height: 40px;
+}
 @media (max-width: 1280px) {
     .whyUseOpenpay .col-4 {
         width: 50%;
@@ -158,16 +256,28 @@ body {background-color: #fff;}
         width: 100%;
         padding: 0 0 50px;
     }
+    .whyUseCircles .circle {
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
 }
 
 @media (max-width: 980px) {
     .whyUseOpenpay .col-4 {
         width: 100%;
+        padding-left: 0;
+        padding-right: 0;
     }
     .heroBusinessContainer .heroInfo {
         padding-right: 20px;
         padding-left: 20px;
         padding-top: 100px;
+    }
+    .col-3 {
+        width: 100%;
+    }
+    .whyUseCircles {
+        padding: 50px 20px;
     }
 }
 @media (max-width: 850px) {
