--- a/newDesign/css/business.css
+++ b/newDesign/css/business.css
@@ -49,6 +49,10 @@ body {background-color: #fff;}
     letter-spacing: -0.44px;
 }
 
+.heroBusinessContainer .btnBox a {
+    font-weight: 600;
+}
+
 .whyUseOpenpay {
     padding: 50px;
 }
