--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -37,8 +37,11 @@ body {background-color: #fff;}
     padding: 10px 10px;
     margin-top: 20px;
     font-size: 14px;
-    font-weight: 600;
     letter-spacing: -0.44px;
+}
+
+.heroHomeContainer .btnBox a {
+    font-weight: 600;
 }
 
 .promotions {
