--- a/newDesign/css/help.css
+++ b/newDesign/css/help.css
@@ -102,3 +102,9 @@ body {background-color: #fff;}
 .subSection {
     margin-bottom: 25px;
 }
+
+@media (max-width: 980px) {
+    .heroHelpContainer .heroInfo {
+        padding: 0 20px;
+    }
+}
