--- a/newDesign/css/help.css
+++ b/newDesign/css/help.css
@@ -105,6 +105,6 @@ body {background-color: #fff;}
 
 @media (max-width: 980px) {
     .heroHelpContainer .heroInfo {
-        padding: 0 20px;
+        padding: 70px 20px 0;
     }
 }
