--- a/newDesign/css/business.css
+++ b/newDesign/css/business.css
@@ -54,7 +54,7 @@ body {background-color: #fff;}
 }
 
 .whyUseOpenpay {
-    padding: 50px;
+    padding: 80px 0;
 }
 .whyUseOpenpay h1 {
     color: #3C465A;
@@ -126,7 +126,7 @@ body {background-color: #fff;}
     margin: 0 auto;
 }
 .longerTerms, .seamless {
-    padding: 50px;
+    padding: 80px 0;
 }
 .longerTerms h1 {
     color: #3C465A;
@@ -192,7 +192,7 @@ body {background-color: #fff;}
 }
 
 .trustedLeaders, .everywereYourCostumers {
-    padding: 50px;
+    padding: 80px 0;
 }
 
 .trustedLeaders h1, .everywereYourCostumers h1 {
@@ -248,7 +248,7 @@ body {background-color: #fff;}
 }
 
 .readyRegister {
-    padding: 50px;
+    padding: 80px 0;
 }
 .readyRegister h1 {
     color: #3C465A;
