--- a/newDesign/css/shop.css
+++ b/newDesign/css/shop.css
@@ -8,7 +8,7 @@ body {
     padding: 0 50px;
 }
 .topSearch {
-    padding-top: 20px;
+    padding: 30px 0;
 }
 .searchBar input[type="text"] {
     height: 48px;
