--- a/newDesign/css/help.css
+++ b/newDesign/css/help.css
@@ -36,22 +36,6 @@ body {background-color: #fff;}
     max-width: 570px;
     margin-top: 34px;
 }
-.heroHelpContainer .btnBox {
-    color: #FFFFFF;
-    padding: 8px 25px;
-    margin: 20px 10px 0 0;
-    font-size: 14px;
-    font-weight: 600;
-    letter-spacing: -0.44px;
-    line-height: 21px;
-    text-align: center;
-    border: 2px solid #fff;
-    border-radius: 4px;
-    display: inline-block;
-}
-.heroHelpContainer .btnBox a {
-    font-weight: 600;
-}
 
 .helpContent {
     padding: 80px 0;
@@ -103,8 +87,85 @@ body {background-color: #fff;}
     margin-bottom: 25px;
 }
 
+.contactUs {
+    padding: 80px 0;
+}
+
+.contactUs h1 {
+    color: #3C465A;
+    font-family: Poppins;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 44px;
+    text-align: center;
+}
+.contactUs h2 {
+    color: #3C465A;
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+}
+.contactUs p {
+    color: #3C465A;
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 300;
+    text-align: center;
+    line-height: 26px;
+    margin-top: 15px;
+    margin-bottom: 65px;
+}
+.contactUs .col-2 {
+    width: 50%;
+    float: left;
+    box-sizing: border-box;
+    text-align: left;
+    padding: 0 50px;
+}
+.contactUs .col-2 img.iconEmail {
+    width: 83px;
+    height: 55px;
+}
+.contactUs .col-2 img.iconPhone {
+    width: 55px;
+    height: 55px;
+}
+.contactUs .col-2 p {
+    text-align: left;
+    margin-bottom: 0;
+}
+.contactUs .contactUsColContainer {
+    max-width: 760px;
+    margin: 0 auto;
+}
+.contactUs .btnBox {
+    color: #40354E;
+    padding: 8px 25px;
+    margin: 20px 10px 0 0;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: -0.44px;
+    line-height: 21px;
+    text-align: center;
+    border: 2px solid #40354E;
+    border-radius: 4px;
+    display: inline-block;
+}
+.contactUs .btnBox a {
+    font-weight: 600;
+}
+
 @media (max-width: 980px) {
     .heroHelpContainer .heroInfo {
         padding: 70px 20px 0;
+    }
+}
+
+
+@media (max-width: 680px) {
+    .contactUs .col-2 {
+        width: 100%;
+        padding: 0 0 50px;
     }
 }
