--- a/newDesign/css/how.css
+++ b/newDesign/css/how.css
@@ -47,13 +47,13 @@ body {background-color: #fff;}
     font-weight: 600;
     line-height: 44px;
     text-align: center;
-    padding: 0 25px 20px;
+    padding: 0 0 20px;
 }
 .intrigued p {
     max-width: 1240px;
     margin: 0 auto;
     text-align: center;
-    padding: 0 50px;
+    /*padding: 0 50px;*/
 }
 .howItWorks {
     padding: 80px 0;
@@ -194,10 +194,10 @@ body {background-color: #fff;}
 
 @media (max-width: 1200px) {
     .heroHowContainer .heroInfo {
-        padding: 120px 50px 0;
+        /*padding: 120px 50px 0;*/
     }
     .everyStep {
-        padding: 50px;
+        padding: 80px 0px;
     }
     .everyStep .col-2 {
         width: 100%;
@@ -206,8 +206,11 @@ body {background-color: #fff;}
 }
 
 @media (max-width: 980px) {
-    .howItWorks, .promotions {
-        padding: 50px;
+    .howItWorks {
+        padding: 80px 0px;
+    }
+    .promotions {
+        padding: 0px;
     }
     .howItWorks .col-2 {
         width: 100%;
