--- a/newDesign/css/nav.css
+++ b/newDesign/css/nav.css
@@ -86,7 +86,7 @@ p,div{
 
 .footer {
     background-color: #3C465A;
-    padding: 80px 0;
+    padding: 80px 32px;
     text-align: center;
     color: #fff;
 }
