--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -47,6 +47,8 @@ body {background-color: #fff;}
 
 .heroHomeContainer .btnBox a {
     font-weight: 600;
+    padding: 0 8px;
+    text-transform: capitalize;
 }
 
 .promotions {
@@ -78,6 +80,7 @@ body {background-color: #fff;}
 .promotions .col-3 img {
     width: calc(100% - 30px);
     margin: 0 auto;
+    border-radius: 4px;
 }
 
 .takeControl, .whereCanShop {
@@ -114,8 +117,20 @@ body {background-color: #fff;}
     margin: 0 auto;
 }
 
-.howItWorks .learnMoreWrapper {text-align: center;padding-top: 60px;padding-bottom: 7px;}
-.howItWorks .button {height: 40px;width: 288px;border: 2px solid #40354E;border-radius: 4px;padding: 5px 95px;font-weight: 600;}
+.howItWorks .learnMoreWrapper {
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 7px;
+}
+
+.howItWorks .button {
+    height: 40px;
+    width: 288px;
+    border: 2px solid #40354E;
+    border-radius: 4px;
+    padding: 8px 95px;
+    font-weight: 600;
+}
 
 
 .whereCanShop .col-4 {
@@ -140,6 +155,7 @@ body {background-color: #fff;}
     font-size: 20px;
     font-weight: 600;
     line-height: 30px;
+    text-align: left;
 }
 
 .downloadApp {
