--- a/newDesign/css/shop.css
+++ b/newDesign/css/shop.css
@@ -25,7 +25,7 @@ body {
     background-color: #FFFFFF;
     margin-right: 10px;
     font-size: 16px;
-    color: #858B98;
+    color: #40354E;
     font-weight: 500;
     line-height: 26px;
     padding: 0 10px;
@@ -105,6 +105,7 @@ body {
 .promotions .col-3 img {
     width: calc(100% - 30px);
     margin: 0 auto;
+    border-radius: 4px;
 }
 
 .promotions.brands .col-4 {
@@ -252,6 +253,7 @@ body {
     font-size: 20px;
     font-weight: 600;
     line-height: 30px;
+    text-align: left;
 }
 
 .featured-brand {
